test/syntax-errors/test.js
'use strict';

const {readFile} = require('fs');

describe('Test suite #1', () => {
    it('should do smth', () => {})
});
